	* src/jni/com_redhat_ftk_EventViewer.c: Ditto.
	* src/java/com/redhat/ftk/Eventviewer.java: Ditto.

	* src/widgets/ftkeventviewer.c: Changed grid lines to not antialias. The two options for antialiasing are: NONE, and GRAY, which just grays the lines.
	There is a third option SUBPIXEL, but Cairo documentation says no backend supports this yet.

2006-09-13  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Added support for user resizable glyph sizes.
	* src/widgets/ftkeventviewer.h: Ditto.
	* src/jni/com_redhat_ftk_EventViewer.c: Ditto.
	* src/java/com/redhat/ftk/EventViewer.java: Ditto.

	* src/widgets/ftkeventviewer.c: Changed to display real time and microseconds.

2006-09-12  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Shrank size of glyphs.

	* src/widgets/ftkeventviewer.c: Made trace lines "thinner" 
	Apparently thinner than 1.0 means that the line becomes grayer. 
	Still looks nicer than black.

2006-09-08  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Ran artistic style for gnu formatting.
	Added mouse edge scrolling
	* src/widgets/ftkeventviewer.h: Ditto.

2006-09-07  Nurdin Premj  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c(ftk_da_redraw_canvas): Added.
	Use ftk_da_redraw_canvas to re-expose the drawing area rather than calling expose manually.
	Shrank the amount of dead area at the end of eventviewer to 1% of the screen size (rather than 10%).

2006-09-06  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Fixed issues with horizontal and vertical scrollbars.
	Changed default span to 10 to reflect default value in java file.
	Added code to deal with drawing area size reallocations. So that more traces can be drawn.
	Cleaned up accessibility names for standard widgets.
	Removed redundant checks of GTK_WIDGET_DRAWABLE. ftk_eventviewer_da_expose 
	already checks for this now.
	Changed to only draw the number of traces that can be seen on  the screen.
